--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "ichtrojan/laravel-otp": "^2.0",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
-        "laravel/tinker": "^2.8"
+        "laravel/tinker": "^2.8",
+        "sqids/sqids": "^0.4.1"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.15",
